tests/baselines/reference/typedefCrossModule3.errors.txt
tests/cases/conformance/jsdoc/mod2.js(1,5): error TS2300: Duplicate identifier 'Foo'.
tests/cases/conformance/jsdoc/mod2.js(3,1): error TS2300: Duplicate identifier 'Foo'.
tests/cases/conformance/jsdoc/mod2.js(4,1): error TS2304: Cannot find name 'module'.


==== tests/cases/conformance/jsdoc/mod2.js (3 errors) ====
    /** @typedef {number} Foo */
        ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'Foo'.
    const ns = {};
    ns.Foo = class {}
    ~~~~~~
!!! error TS2300: Duplicate identifier 'Foo'.
    module.exports = ns;
    ~~~~~~
!!! error TS2304: Cannot find name 'module'.
    
    